--- a/Trappist/src/Promact.Trappist.Web/Views/_ViewImports.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Promact.Trappist.Web.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
