--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
@@ -1,24 +1,18 @@
-﻿<div class="before-login-layout frgt-pswd">
-    <div class="content-container">
-        <div class="content-box">
-            <div class="logo-area">
-                <img src="~/images/logo.png" alt="Logo" />
-            </div>
-            <div class="form-area">
-                <div class="titlebar">
-                    <h1>Forgot Password</h1>
-                </div>
-                <form>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Provide your Email here" />
-                    </div>
-                    <div class="actions-area">
-                        <button type="submit" class="btn btn-primary">Send Password Reset Link</button>
-                        <a href="">Back to Login</a>
-                    </div>
-                </form>
-            </div>
-        </div>
+﻿@{
+    Layout = "_BeforeLoginLayout";
+}
+
+<div class="form-area frgt-pswd">
+    <div class="titlebar">
+        <h1>Forgot Password</h1>
     </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+    <form>
+        <div class="form-group">
+            <input type="email" class="form-control" placeholder="Provide your Email here" />
+        </div>
+        <div class="actions-area">
+            <button type="submit" class="btn btn-primary">Send Password Reset Link</button>
+            <a href="">Back to Login</a>
+        </div>
+    </form>
 </div>
