--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPassword.cshtml
@@ -1,26 +1,20 @@
-﻿<div class="before-login-layout">
-    <div class="content-container">
-        <div class="content-box">
-            <div class="logo-area">
-                <img src="~/images/logo.png" alt="Logo" />
-            </div>
-            <div class="form-area">
-                <div class="titlebar">
-                    <h1>Reset Password</h1>
-                </div>
-                <form>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="New Password" />
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Confirm Password" />
-                    </div>
-                    <div class="actions-area">
-                        <button type="submit" class="btn btn-primary mb0">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+﻿@{
+    Layout = "_BeforeLoginLayout";
+}
+
+<div class="form-area">
+    <div class="titlebar">
+        <h1>Reset Password</h1>
     </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+    <form>
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="New Password" />
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Confirm Password" />
+        </div>
+        <div class="actions-area">
+            <button type="submit" class="btn btn-primary mb0">Submit</button>
+        </div>
+    </form>
 </div>
