--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,18 +1,12 @@
-﻿<div class="before-login-layout">
-    <div class="content-container">
-        <div class="content-box">
-            <div class="logo-area">
-                <img src="~/images/logo.png" alt="Logo" />
-            </div>
-            <div class="form-area">
-                <div class="titlebar">
-                    <h1>Forgot Password Confirmation</h1>
-                </div>
-                <div class="msg-area">
-                    <h4>Your password has been reset. Please <a href="">Click Here</a> to sign in.</h4>
-                </div>
-            </div>
-        </div>
+﻿@{
+    Layout = "_BeforeLoginLayout";
+}
+
+<div class="form-area">
+    <div class="titlebar">
+        <h1>Forgot Password Confirmation</h1>
     </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+    <div class="msg-area">
+        <h4>Your password has been reset. Please <a href="">Click Here</a> to sign in.</h4>
+    </div>
 </div>
