--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -1,6 +1,11 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+
+@{
+    Layout = "_BeforeLoginLayout";
+}
+
 @model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
 <div class="before-login-layout">
     <div class="content-container">
@@ -12,23 +17,23 @@
                 <div class="titlebar">
                     <h1>Sign In</h1>
                 </div>
-                       <form asp-controller="Account" asp-action="Login"  method="post">
-                        <div class="form-group">
-                            <input asp-for="Email" class="form-control" placeholder="Email" />
-                            <span asp-validation-for="Email"class="text-danger"></span>
-                         </div>
+                <form asp-controller="Account" asp-action="Login" method="post">
+                    <div class="form-group">
+                        <input asp-for="Email" class="form-control" placeholder="Email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
 
-                        <div class="form-group">
-                            <input asp-for="Password" class="form-control" placeholder="Password" />
-                            <span asp-validation-for="Password"class="text-danger"></span>
-                        </div>
-                        <div class="actions-area">
-                            <button type="submit" class="btn btn-primary" onclick="">Sign In</button>
-                            <a href="">Forgot Password?</a>
-                        </div>
-                    </form>
-</div>
+                    <div class="form-group">
+                        <input asp-for="Password" class="form-control" placeholder="Password" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="actions-area">
+                        <button type="submit" class="btn btn-primary" onclick="">Sign In</button>
+                        <a href="">Forgot Password?</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+    <footer>Copyright &copy;@DateTime.Now.Year Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
 </div>
