--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -25,3 +25,7 @@
         </div>
     </form>
 </div>
+        </div>
+    </div>
+    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+</div>
