Updated login model in application class

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model  Promact.Trappist.Web.Models.ApplicationUser
+@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
 <div class="before-login-layout">
     <div class="content-container">
         <div class="content-box">
