Designed Single Answer page & Multiple Answers page.

--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
@@ -41,7 +41,7 @@
                 @RenderBody()
             </div>
         </div>
-        <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+        <footer>Copyright &copy;@DateTime.Now.Year Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
     </div>
 </body>
 </html>
