Login validation functionality updated

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -1,34 +1,27 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
-<div class="before-login-layout">
-    <div class="content-container">
-        <div class="content-box">
-            <div class="logo-area">
-                <img src="~/images/logo.png" alt="Logo" />
-            </div>
-            <div class="form-area">
-                <div class="titlebar">
-                    <h1>Sign In</h1>
-                </div>
-                       <form asp-controller="Account" asp-action="Login"  method="post">
-                        <div class="form-group">
-                            <input asp-for="Email" class="form-control" placeholder="Email" />
-                            <span asp-validation-for="Email"class="text-danger"></span>
-                         </div>
 
-                        <div class="form-group">
-                            <input asp-for="Password" class="form-control" placeholder="Password" />
-                            <span asp-validation-for="Password"class="text-danger"></span>
-                        </div>
-                        <div class="actions-area">
-                            <button type="submit" class="btn btn-primary" onclick="">Sign In</button>
-                            <a href="">Forgot Password?</a>
-                        </div>
-                    </form>
-</div>
-        </div>
+@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
+@{
+    Layout = "_BeforeLoginLayout";
+}
+<div class="form-area">
+    <div class="titlebar">
+        <h1>Sign In</h1>
     </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
+    <form asp-controller="Account" asp-action="Login" method="post" >
+        <div class="form-group">
+            <input asp-for="Email" class="form-control" placeholder="Email"  autocomplete="off" required=""/>
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" required=""/>
+        </div>
+        <div class="actions-area">
+            <button type="submit" class="btn btn-primary">Sign In</button>
+            <a href="">Forgot Password?</a>
+        </div>
+    </form>
 </div>
