--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -6,6 +6,11 @@
 @{
     Layout = "_BeforeLoginLayout";
 }
+
+@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
+@{
+    Layout = "_BeforeLoginLayout";
+}
 <div class="form-area">
     <div class="titlebar">
         <h1>Sign In</h1>
