--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -6,6 +6,11 @@
 @{
     Layout = "_BeforeLoginLayout";
 }
+
+@model  Promact.Trappist.DomainModel.ApplicationClasses.Account.Login
+@{
+    Layout = "_BeforeLoginLayout";
+}
 <div class="form-area">
     <div class="titlebar">
         <h1>Sign In</h1>
@@ -24,8 +29,4 @@
             <a href="">Forgot Password?</a>
         </div>
     </form>
-</div>
-        </div>
-    </div>
-    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
 </div>
