Designed Basic Setup page.

--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
@@ -35,7 +35,7 @@
     <div class="before-login-layout">
         <div class="content-container">
             <div class="content-box">
-                <div class="logo-area">
+                <div>
                     <img src="~/images/logo.png" alt="Logo" />
                 </div>
                 @RenderBody()
