--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -10,15 +10,16 @@
 <div class="form-area">
     <div class="titlebar">
         <h1>Sign In</h1>
-    </div>
+    </div>   
     <form asp-controller="Account" asp-action="Login" method="post" >
+        <div class="error-msg">@ViewBag.Error</div>
         <div class="form-group">
             <input asp-for="Email" class="form-control" placeholder="Email"  autocomplete="off" required=""/>
-            <span asp-validation-for="Email" class="text-danger"></span>
+            <span asp-validation-for="Email" class="error-msg"></span>
         </div>
 
         <div class="form-group">
-            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" required=""/>
+            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" required=""/>     
         </div>
         <div class="actions-area">
             <button type="submit" class="btn btn-primary">Sign In</button>
