--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -192,13 +192,18 @@ h6, .h6 {
     width: 600px;
     background-color: $color_bg;
     border-radius: 5px;
-    padding: 15px 25px 20px;
+    padding: 15px 0 20px;
 
     .dialog {
       .dialog-title {
-        margin: 0 -25px;
         border-bottom: 1px solid $color_border;
         padding: 0 14px 12px 25px;
+
+        .mat-dialog-title {
+          font-size: 24px;
+          font-weight: 600;
+          margin: 0;
+        }
 
         button {
           padding: 0;
@@ -216,12 +221,16 @@ h6, .h6 {
         }
       }
 
-      .dialog-body {
-        padding: 25px 0;
+      .mat-dialog-content {
+        margin: 0;
+        padding: 25px 25px 0 25px;
       }
 
-      .dialog-actions {
+      .mat-dialog-actions {
+        display: block;
         text-align: right;
+        padding: 25px 25px 0 25px;
+        margin: 0;
       }
     }
   }
