--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         </div>
     </div>
 </app>
-
+<form asp-controller="Profile" asp-action="LogOut" method="post" id="logoutForm" class="navbar-right"></form>
 <environment names="Development">
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
