--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="/bundle.css">
     </environment>
 
-    <!--TODO: Copy to local maybe-->>
+    <!--TODO: Copy to local maybe-->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
