added dist folder for publishing in Web.csproj files, changed relative paths for production, updated gitignore to exclude dist folder

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -16,6 +16,6 @@
 </environment>
 
 <environment names="Staging,Production">
-    <script src="/shims.js"></script>
-    <script src="/setup-app-bundle.js"></script>
+    <script src="/dist/shims.js"></script>
+    <script src="/dist/setup-app-bundle.js"></script>
 </environment>
