--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -14,6 +14,6 @@
 </environment>
 
 <environment names="Staging,Production">
-    <script src="/shims.js"></script>
-    <script src="/app-bundle.js"></script>
+    <script src="/dist/shims.js"></script>
+    <script src="/dist/app-bundle.js"></script>
 </environment>
