--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     </environment>
 
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="/bundle.css">
+        <link rel="stylesheet" href="/dist/bundle.css">
     </environment>
 
     <!--TODO: Copy to local maybe-->
