Made changes as per Dharmesh's comment.

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<app>Loading...</app>
+﻿<app>
+    <div class="loader-container">
+        <div class="spinner"></div>
+        <h1>Loading...</h1>
+    </div>
+</app>
 
 <environment names="Development">
     <!-- Polyfill(s) for older browsers -->
