--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -1,5 +1,8 @@
 ﻿<setup>
-    Loading..
+    <div class="loader-container">
+        <div class="spinner"></div>
+        <h1>Loading...</h1>
+    </div>
 </setup>
 
 <environment names="Development">
