--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -1,7 +1,9 @@
 ﻿<setup>
-    <div class="loader-container">
-        <div class="spinner"></div>
-        <h1>Loading...</h1>
+    <div class="loader-container main-loader">
+        <div class="loader-block">
+            <div class="spinner"></div>
+            <h1>Loading...</h1>
+        </div>
     </div>
 </setup>
 
