--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -47,5 +47,6 @@
             }
         </div>
     </footer>
+    <script src="//cdn.ckeditor.com/4.6.2/standard/ckeditor.js"></script>
 </body>
 </html>
