--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -9,7 +9,7 @@ $color_bg: #F9F9F9;
 $color_bg_secondary: #F5F5F5;
 $color_border: #EDEDED;
 $color_white: #FFFFFF;
-$color_white_opacity: rgba(255, 255, 255, 0.8);
+$color_white_opacity: rgba(white, 0.8);
 $color_red: #DD2C00;
 
 /* Size */
@@ -24,8 +24,10 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 13px;
+  background-color: $color_bg;
   color: $color_base;
-  height: $full_size;
+  min-height: $full_size;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .h7 {
@@ -79,7 +81,7 @@ h6, .h6 {
 }
 
 .p0 {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .pl0 {
@@ -186,7 +188,7 @@ h6, .h6 {
           outline: 0;
         }
 
-        i {
+        .material-icons {
           vertical-align: top;
           padding-right: 5px;
           font-size: 18px;
@@ -271,6 +273,128 @@ h6, .h6 {
   }
 }
 
+md2-accordion-tab {
+  .md2-accordion-header {
+    border: 0;
+    box-shadow: none;
+    padding-right: 0;
+    line-height: inherit;
+
+    .md2-accordion-header-icon {
+      display: none;
+    }
+  }
+
+  .md2-accordion-tab-content {
+    padding: 0;
+    border-bottom: 0;
+  }
+}
+
+.collapsible-block {
+  margin-bottom: 10px;
+
+  .collapsible-header {
+    display: block;
+    border: 1px solid $color_border;
+    background-color: $color_white;
+    color: $color_base;
+    padding: 10px 10px 10px 20px;
+
+    .title-info {
+      span {
+        vertical-align: middle;
+        padding-right: 3px;
+      }
+    }
+
+    .qs-selected {
+      vertical-align: middle;
+    }
+
+    .delete-option {
+      cursor: pointer;
+
+      .material-icons,
+      span {
+        vertical-align: middle;
+      }
+    }
+
+    .collapsible-icon {
+      cursor: pointer;
+      margin-left: 30px;
+
+      .material-icons {
+        vertical-align: middle;
+
+        &.remove-icon {
+          display: none;
+        }
+      }
+    }
+  }
+
+  .collapsible-body {
+    background-color: $color_white;
+    border: 1px solid $color_border;
+    padding: 20px;
+  }
+
+  &.md2-accordion-tab-active {
+    .collapsible-header {
+      border: 1px solid $color_theme_secondary;
+      background-color: $color_theme;
+      color: $color_white;
+
+      .collapsible-icon {
+        .add-icon {
+          display: none;
+        }
+
+        .remove-icon {
+          display: inline-block;
+        }
+      }
+    }
+  }
+}
+
+.qs-container {
+  .qs-num {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px;
+  }
+
+  .qs-text {
+    display: inline-block;
+    width: 85%;
+
+    .ans-option {
+      margin-bottom: 5px;
+
+      span {
+        display: inline-block;
+        vertical-align: top;
+
+        &:first-child {
+          margin-right: 5px;
+          width: 15px;
+        }
+
+        &:last-child {
+          width: 90%;
+        }
+      }
+
+      &.correct {
+        color: $color_theme;
+      }
+    }
+  }
+}
+
 /* Layout */
 .navbar {
   border: 0;
@@ -311,7 +435,7 @@ h6, .h6 {
     &.navbar-right {
       margin-right: -25px;
 
-      li i {
+      li .material-icons {
         padding: 14px 10px;
         font-size: 32px;
         cursor: pointer;
@@ -321,6 +445,9 @@ h6, .h6 {
 }
 
 footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   background-color: $color_base;
   color: $color_white;
   text-align: center;
@@ -328,8 +455,7 @@ footer {
 }
 
 .main-content {
-  min-height: 550px;
-  padding: 20px 0;
+  padding: 20px 0 80px;
   background-color: $color_bg;
 
   .title-area {
@@ -549,7 +675,7 @@ footer {
       color: $color_theme;
       cursor: pointer;
 
-      i {
+      .material-icons {
         font-size: 100px;
         margin-bottom: 20px;
       }
@@ -562,7 +688,7 @@ footer {
       margin-bottom: 20px;
 
       .test-title {
-        i {
+        .material-icons {
           margin-right: -10px;
           color: $color_base_secondary;
           cursor: pointer;
@@ -627,7 +753,7 @@ footer {
         line-height: 24px;
       }
 
-      i {
+      .material-icons {
         color: $color_base_secondary;
         cursor: pointer;
 
@@ -662,7 +788,7 @@ footer {
           line-height: 24px;
           cursor: pointer;
 
-          i {
+          .material-icons {
             color: $color_base_secondary;
 
             &:hover, &:focus {
@@ -678,7 +804,7 @@ footer {
             background-color: $color_theme;
             color: $color_white;
 
-            i {
+            .material-icons {
               color: $color_white;
             }
           }
@@ -729,7 +855,7 @@ footer {
             text-decoration: none;
           }
 
-          i {
+          .material-icons {
             vertical-align: text-bottom;
           }
         }
@@ -743,44 +869,9 @@ footer {
 
           padding: 25px 10px 15px 25px;
           border-bottom: 1px solid $color_border;
-
-          .qs-container {
-            .qs-num {
-              display: inline-block;
-              vertical-align: top;
-              margin-right: 20px;
-            }
-
-            .qs-text {
-              display: inline-block;
-              width: 85%;
-
-              .ans-option {
-                margin-bottom: 5px;
-
-                span {
-                  display: inline-block;
-                  vertical-align: top;
-
-                  &:first-child {
-                    margin-right: 5px;
-                    width: 15px;
-                  }
-
-                  &:last-child {
-                    width: 90%;
-                  }
-                }
-
-                &.correct {
-                  color: $color_theme;
-                }
-              }
-            }
-          }
         }
 
-        i {
+        .material-icons {
           color: $color_base_secondary;
           cursor: pointer;
 
@@ -794,6 +885,115 @@ footer {
 }
 
 /* Single & Multiple Answers */
+.mat-ripple-element {
+  background-color: rgba(1, 185, 187, 0.1) !important;
+}
+
+.mat-radio-button {
+  &.mat-radio-checked {
+    .mat-radio-outer-circle {
+      border-color: $color_theme;
+    }
+  }
+
+  display: block;
+  width: 54%;
+
+  .mat-radio-label {
+    align-items: center;
+    margin-bottom: 15px;
+    width: $full_size;
+
+    .mat-radio-container {
+      top: 0;
+      height: 16px;
+      width: 16px;
+
+      .mat-radio-outer-circle {
+        border-color: $color_base_secondary;
+        height: 16px;
+        width: 16px;
+      }
+
+      .mat-radio-inner-circle {
+        background-color: $color_theme;
+        height: 16px;
+        width: 16px;
+      }
+    }
+
+    .mat-radio-label-content {
+      padding-left: 15px;
+      width: $full_size;
+
+      .form-control {
+        display: inline-block;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
+        width: 92%;
+      }
+
+      .material-icons {
+        vertical-align: middle;
+        color: $color_base_secondary;
+        font-size: 16px;
+
+        &:hover {
+          color: $color_base;
+        }
+      }
+    }
+  }
+}
+
+.mat-checkbox {
+  &.mat-checkbox-checked {
+    .mat-checkbox-background {
+      background-color: $color_theme;
+    }
+  }
+
+  display: block;
+  width: 54%;
+
+  .mat-checkbox-layout {
+    margin-bottom: 15px;
+    width: $full_size;
+
+    .mat-checkbox-inner-container {
+      margin: auto;
+      width: 16px;
+      height: 16px;
+
+      .mat-checkbox-frame {
+        border-color: $color_base_secondary;
+      }
+    }
+
+    .mat-checkbox-label {
+      width: $full_size;
+      padding-left: 15px;
+
+      .form-control {
+        display: inline-block;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
+        width: 92%;
+      }
+
+      .material-icons {
+        vertical-align: middle;
+        color: $color_base_secondary;
+        font-size: 16px;
+
+        &:hover {
+          color: $color_base;
+        }
+      }
+    }
+  }
+}
+
 .question-type {
   border: 1px solid $color_border;
   background-color: $color_white;
@@ -808,128 +1008,12 @@ footer {
       margin-bottom: 10px;
       font-weight: 700;
     }
-
-    h5 {
-    }
   }
 
   .form-fields {
     padding: 20px 30px;
 
     .form-group {
-      .mat-radio-button {
-        .mat-ripple-element {
-          background-color: rgba(1, 185, 187, 0.1);
-        }
-
-        &.mat-radio-checked {
-          .mat-radio-outer-circle {
-            border-color: $color_theme;
-          }
-        }
-
-        display: block;
-        width: 54%;
-
-        .mat-radio-label {
-          align-items: center;
-          margin-bottom: 15px;
-          width: $full_size;
-
-          .mat-radio-container {
-            top: 0;
-            height: 16px;
-            width: 16px;
-
-            .mat-radio-outer-circle {
-              border-color: $color_base_secondary;
-              height: 16px;
-              width: 16px;
-            }
-
-            .mat-radio-inner-circle {
-              background-color: $color_theme;
-              height: 16px;
-              width: 16px;
-            }
-          }
-
-          .mat-radio-label-content {
-            padding-left: 15px;
-            width: $full_size;
-
-            .form-control {
-              display: inline-block;
-              font-family: 'Open Sans', sans-serif;
-              font-weight: 400;
-              width: 92%;
-            }
-
-            i {
-              vertical-align: middle;
-              color: $color_base_secondary;
-              font-size: 16px;
-
-              &:hover {
-                color: $color_base;
-              }
-            }
-          }
-        }
-      }
-
-      .mat-checkbox {
-        .mat-ripple-element {
-          background-color: rgba(1, 185, 187, 0.1);
-        }
-
-        &.mat-checkbox-checked {
-          .mat-checkbox-background {
-            background-color: $color_theme;
-          }
-        }
-
-        display: block;
-        width: 54%;
-
-        .mat-checkbox-layout {
-          margin-bottom: 15px;
-          width: $full_size;
-
-          .mat-checkbox-inner-container {
-            margin: auto;
-            width: 16px;
-            height: 16px;
-
-            .mat-checkbox-frame {
-              border-color: $color_base_secondary;
-            }
-          }
-
-          .mat-checkbox-label {
-            width: $full_size;
-            padding-left: 15px;
-
-            .form-control {
-              display: inline-block;
-              font-family: 'Open Sans', sans-serif;
-              font-weight: 400;
-              width: 92%;
-            }
-
-            i {
-              vertical-align: middle;
-              color: $color_base_secondary;
-              font-size: 16px;
-
-              &:hover {
-                color: $color_base;
-              }
-            }
-          }
-        }
-      }
-
       &.answer-choices {
         margin: 32px 0;
 
@@ -961,10 +1045,9 @@ footer {
   background-color: $color_bg;
 
   .setup-content {
-    min-height: 610px;
     width: 800px;
     margin: 0 auto;
-    padding: 80px 0;
+    padding: 80px 0 100px;
 
     .logo-area {
       text-align: center;
@@ -1101,7 +1184,7 @@ footer {
         }
       }
 
-      i {
+      .material-icons {
         vertical-align: middle;
         color: $color_base_secondary;
         cursor: pointer;
@@ -1110,7 +1193,7 @@ footer {
     }
 
     .btn {
-      i {
+      .material-icons {
         vertical-align: top;
         font-size: 18px;
         padding-right: 8px;
@@ -1157,7 +1240,11 @@ footer {
         display: inline-block;
         padding-right: 20px;
 
-        i {
+        a {
+          color: inherit;
+        }
+
+        .material-icons {
           vertical-align: middle;
         }
 
@@ -1204,10 +1291,60 @@ footer {
             line-height: 24px;
           }
 
-          i {
+          .material-icons {
             color: $color_white;
           }
         }
+      }
+    }
+  }
+
+  .questions-selection {
+    margin: 20px 0;
+
+    .mat-checkbox {
+      display: inline-block;
+      width: inherit;
+
+      .mat-checkbox-layout {
+        margin-bottom: 0;
+
+        .mat-checkbox-label {
+          padding-left: 0;
+        }
+      }
+    }
+
+    .select-all {
+      padding: 10px 20px;
+      border-bottom: 1px solid $color_border;
+
+      h5 {
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0 15px 0 10px;
+      }
+
+      .h7 {
+        vertical-align: middle;
+      }
+    }
+
+    .qs-container {
+      padding: 20px;
+      border-bottom: 1px solid $color_border;
+
+      &:last-child {
+        border-bottom: 0;
+      }
+
+      .tags {
+        margin: 0 5px 0 0;
+      }
+
+      .mat-checkbox {
+        vertical-align: top;
+        margin-right: 10px;
       }
     }
   }
@@ -1216,7 +1353,7 @@ footer {
 .dialog .url-container {
   position: relative;
 
-  i {
+  .material-icons {
     position: absolute;
     right: 10px;
     top: 8px;
@@ -1263,7 +1400,7 @@ footer {
           margin-right: 5px;
           border-radius: 3px;
 
-          i {
+          .material-icons {
             vertical-align: middle;
             font-size: 15px;
             margin-left: 15px;
@@ -1291,47 +1428,6 @@ footer {
             }
           }
         }
-      }
-    }
-
-    .test-case-block {
-      margin-bottom: 10px;
-
-      .tc-header {
-        border: 1px solid $color_theme_secondary;
-        background-color: $color_theme;
-        color: $color_white;
-        padding: 10px 10px 10px 20px;
-
-        .title-info {
-          span {
-            vertical-align: middle;
-            padding-right: 3px;
-          }
-        }
-
-        .delete-option {
-          cursor: pointer;
-          margin-right: 30px;
-
-          i,
-          span {
-            vertical-align: middle;
-          }
-        }
-
-        .collapsible-icon {
-          cursor: pointer;
-
-          i {
-            vertical-align: middle;
-          }
-        }
-      }
-
-      .tc-body {
-        border: 1px solid $color_border;
-        padding: 20px;
       }
     }
 
